// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validation tests > fails later with malformed regex 1`] = `
{
  "reason": "smtp",
  "valid": false,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "reason": "SMTP Error: The mail address that you specified was not syntactically correct.",
      "valid": false,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > fails with bad dns 1`] = `
{
  "reason": "mx",
  "valid": false,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "reason": "MX record not found",
      "valid": false,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": false,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > fails with bad mailbox 1`] = `
{
  "reason": "smtp",
  "valid": false,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "reason": "Mailbox not found.",
      "valid": false,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > fails with bad regex 1`] = `
{
  "reason": "regex",
  "valid": false,
  "validators": {
    "disposable": {
      "valid": false,
    },
    "mx": {
      "valid": false,
    },
    "regex": {
      "reason": "Email does not contain "@".",
      "valid": false,
    },
    "smtp": {
      "valid": false,
    },
    "typo": {
      "valid": false,
    },
  },
}
`;

exports[`validation tests > fails with common typo 1`] = `
{
  "reason": "typo",
  "valid": false,
  "validators": {
    "disposable": {
      "valid": false,
    },
    "mx": {
      "valid": false,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": false,
    },
    "typo": {
      "reason": "Likely typo, suggested email: david@gmail.com",
      "valid": false,
    },
  },
}
`;

exports[`validation tests > fails with disposable email 1`] = `
{
  "reason": "disposable",
  "valid": false,
  "validators": {
    "disposable": {
      "reason": "Email was created using a disposable email service",
      "valid": false,
    },
    "mx": {
      "valid": false,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": false,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > fails without sending data 1`] = `
{
  "reason": "smtp",
  "valid": false,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "reason": "SMTP Error: The requested action was not done. Some error occurmiles in the mail server.",
      "valid": false,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > passes when valid special char 1`] = `
{
  "valid": true,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": true,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > passes when valid wildcard 1`] = `
{
  "valid": true,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": true,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > passes when we skip smtp validation 1`] = `
{
  "valid": true,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": true,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;

exports[`validation tests > passes with custom TLD 1`] = `
{
  "valid": true,
  "validators": {
    "disposable": {
      "valid": true,
    },
    "mx": {
      "valid": true,
    },
    "regex": {
      "valid": true,
    },
    "smtp": {
      "valid": true,
    },
    "typo": {
      "valid": true,
    },
  },
}
`;
